# app/models/thing.py
@@ -1,3 +1,4 @@
+from enum import Enum
 from typing import Any, Dict
 
 from pydantic import BaseModel, Field, validator
@@ -5,12 +6,30 @@ from pydantic import BaseModel, Field, validator
 from app.models.common import Request, Response, BaseORMObject
 
 
+class ThingType(str, Enum):
+    UNKNOWN = 'UNKNOWN'  # for testing purposes
+    COMPARISON = 'COMPARISON'
+    DIAGRAM = 'DIAGRAM'
+    VISUALIZATION = 'VISUALIZATION'
+    DRAFT_COMPARISON = 'DRAFT_COMPARISON'
+    LIST = 'LIST'
+    REVIEW = 'REVIEW'
+    PAPER_VERSION = 'PAPER_VERSION'
+    ANY = 'ANY'
+
+
+class ExportFormat(str, Enum):
+    UNKNOWN = 'UNKNOWN'  # for testing purposes
+    CSV = 'CSV'
+    DATAFRAME = 'DATAFRAME'
+
+
 class BaseThing(Request):
-    thing_type: str = Field(..., min_length=1)
+    thing_type: ThingType
     thing_key: str = Field(..., min_length=1)
 
 
-class StorageThingAddRequest(BaseThing):
+class ThingAddRequest(BaseThing):
     data: Dict[str, Any]
 
     @validator('data', pre=True, always=True)
@@ -20,7 +39,7 @@ class StorageThingAddRequest(BaseThing):
         return value
 
 
-class StorageThingGetResponse(Response):
+class ThingGetResponse(Response):
 
     class Payload(BaseModel):
 
