# app/routers/contribution.py
@@ -1,14 +1,18 @@
 import http
 
-from typing import List
+from typing import List, Union
 
 from fastapi import APIRouter, Depends, Query
+from starlette.responses import StreamingResponse
 
+from app.models.common import Response
 from app.models.contribution import ContributionSimilarityInitIndexResponse, ContributionSimilarityIndexResponse, \
     ContributionSimilaritySimilarResponse, ContributionComparisonResponse, ComparisonType
+from app.models.thing import ExportFormat
 from app.services.common.orkg_backend import OrkgBackendWrapperService
 from app.services.common.es import ElasticsearchService
 from app.common.util.decorators import log
+from app.services.common.wrapper import ResponseWrapper
 from app.services.contribution import ContributionSimilarityService, ContributionComparisonService
 
 router = APIRouter(
@@ -24,7 +28,7 @@ def initializes_es_index(
         es_service: ElasticsearchService = Depends(ElasticsearchService.get_instance)
 ):
     service = ContributionSimilarityService(orkg_backend, es_service)
-    return service.init_index()
+    return ResponseWrapper.wrap_json(service.init_index())
 
 
 @router.post('/internal/index', response_model=ContributionSimilarityIndexResponse, status_code=http.HTTPStatus.OK)
@@ -35,7 +39,7 @@ def indexes_a_contribution(
         es_service: ElasticsearchService = Depends(ElasticsearchService.get_instance)
 ):
     service = ContributionSimilarityService(orkg_backend, es_service)
-    return service.index(contribution_id)
+    return ResponseWrapper.wrap_json(service.index(contribution_id))
 
 
 @router.get('/similar', response_model=ContributionSimilaritySimilarResponse, status_code=http.HTTPStatus.OK)
@@ -47,15 +51,29 @@ def queries_similar_contributions(
         es_service: ElasticsearchService = Depends(ElasticsearchService.get_instance)
 ):
     service = ContributionSimilarityService(orkg_backend, es_service)
-    return service.query(contribution_id, n_results)
+    return ResponseWrapper.wrap_json(service.query(contribution_id, n_results))
 
 
-@router.get('/compare', response_model=ContributionComparisonResponse, status_code=http.HTTPStatus.OK)
+@router.get(
+    '/compare',
+    response_model=Union[ContributionComparisonResponse, Response],
+    status_code=http.HTTPStatus.OK
+)
 @log(__name__)
 def compares_contributions(
         contributions: List[str] = Query(None),
         type: ComparisonType = ComparisonType.PATH,
+        format: ExportFormat = None,
         orkg_backend: OrkgBackendWrapperService = Depends(OrkgBackendWrapperService.get_instance)
 ):
     service = ContributionComparisonService(orkg_backend)
-    return service.compare(contribution_ids=contributions, comparison_type=type)
+    comparison = service.compare(contribution_ids=contributions, comparison_type=type, format=format)
+
+    if format == ExportFormat.CSV:
+        return StreamingResponse(
+            iter([comparison]),
+            media_type='text/csv',
+            headers={'Content-Disposition': 'attachment; filename={}.csv'.format('_'.join(contributions))}
+        )
+
+    return ResponseWrapper.wrap_json(comparison)
